# Selvr

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  plan.md  selvr.toml.example
benchmarks/: compile.sh  hybrid.html  startup.html  tti.html  vm.html
benchmarks/selvr/: fib.js  fib.js.map  fib.self  matmul.js  matmul.js.map  matmul.self  sieve.js  sieve.js.map  sieve.self
crates/selvr-bridge/: Cargo.toml
crates/selvr-bridge/src/: codegen.rs  lib.rs  zerocopy.rs
crates/selvr-bytecode/: Cargo.toml
crates/selvr-bytecode/src/: emit.rs  encode.rs  incr.rs  lib.rs  module.rs  opcode.rs  opt.rs
crates/selvr-cli/: Cargo.toml
crates/selvr-cli/src/: main.rs
crates/selvr-codegen/: Cargo.toml
crates/selvr-codegen/src/: error.rs  js.rs  lib.rs  sourcemap.rs
crates/selvr-dap/: Cargo.toml
crates/selvr-dap/src/: adapter.rs  main.rs  protocol.rs
crates/selvr-fmt/: Cargo.toml
crates/selvr-fmt/src/: lib.rs  printer.rs
crates/selvr-ir/: Cargo.toml
crates/selvr-ir/src/: ir.rs  lib.rs  lower.rs
crates/selvr-lexer/: Cargo.toml
crates/selvr-lexer/src/: error.rs  lexer.rs  lib.rs  span.rs  token.rs
crates/selvr-lint/: Cargo.toml
crates/selvr-lint/src/: lib.rs
crates/selvr-lint/src/rules/: dead_code.rs  missing_return.rs  mod.rs  shadow_variable.rs  target_hint.rs  unused_var.rs
crates/selvr-lsp/: Cargo.toml
crates/selvr-lsp/src/: completion.rs  diagnostics.rs  hover.rs  main.rs  server.rs
crates/selvr-parser/: Cargo.toml
crates/selvr-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/selvr-parser/tests/: snapshots.rs
crates/selvr-pkg/: Cargo.toml
crates/selvr-pkg/src/: error.rs  installer.rs  lib.rs  lockfile.rs  manifest.rs  registry.rs  resolver.rs
crates/selvr-target/: Cargo.toml
crates/selvr-target/src/: infer.rs  lib.rs  propagate.rs  target.rs
crates/selvr-typechecker/: Cargo.toml
crates/selvr-typechecker/src/: borrow.rs  error.rs  infer.rs  lib.rs  resolver.rs  ty.rs
crates/selvr-vm/: Cargo.toml  wasm-pack.toml
crates/selvr-vm/src/: dom.rs  lib.rs  mem.rs  runtime.rs  vm.rs  wasm.rs
docs/: BYTECODE.md  REGISTRY.md  bytecode.html  comparison.html  index.html  registry.html  why-velox.html
docs/api/: index.html
docs/benchmarks/: compile.sh  hybrid.html  startup.html  tti.html  vm.html
docs/benchmarks/selvr/: fib.js.map  fib.self  matmul.js.map  matmul.self  sieve.js.map  sieve.self
docs/games/: index.html
docs/games/_shared/: wasm-kernels.js
docs/games/alloc-strike/: index.html
docs/games/alloc-strike/selvr/: game.js  game.self  index.html
docs/games/alloc-strike/typescript/: game.js  game.ts  index.html
docs/games/binary-hunt/: index.html
docs/games/binary-hunt/selvr/: game.js  game.self  index.html
docs/games/binary-hunt/typescript/: game.js  game.ts  index.html
docs/games/blur-pass/: index.html
docs/games/blur-pass/selvr/: game.js  index.html
docs/games/blur-pass/typescript/: game.js  game.ts  index.html
docs/games/bucket-downpour/: index.html
docs/games/bucket-downpour/selvr/: game.js  game.self  index.html
docs/games/bucket-downpour/typescript/: game.js  game.ts  index.html
docs/games/core-harvest/: index.html
docs/games/core-harvest/selvr/: game.js  game.self  index.html
docs/games/core-harvest/typescript/: game.js  game.ts  index.html
docs/games/count-sort-surge/: index.html
docs/games/count-sort-surge/selvr/: game.js  game.self  index.html
docs/games/count-sort-surge/typescript/: game.js  game.ts  index.html
docs/games/grid-life/: index.html
docs/games/grid-life/selvr/: game.js  game.self  index.html
docs/games/grid-life/typescript/: game.js  game.ts  index.html
docs/games/matrix-core/: index.html
docs/games/matrix-core/selvr/: game.js  game.self  index.html
docs/games/matrix-core/typescript/: game.js  game.ts  index.html
docs/games/orb-catcher/: index.html
docs/games/orb-catcher/selvr/: game.js  game.self  index.html
docs/games/orb-catcher/typescript/: game.js  game.ts  index.html
docs/games/particle-storm/: index.html
docs/games/particle-storm/selvr/: game.js  game.self  index.html
docs/games/particle-storm/typescript/: game.js  game.ts  index.html
docs/games/path-bfs/: index.html
docs/games/path-bfs/selvr/: game.js  game.self  index.html
docs/games/path-bfs/typescript/: game.js  game.ts  (+1 more)
docs/games/queue-blitz/: index.html
docs/games/spring-chain/: index.html
docs/games/vector-bench/: index.html
docs/games/wasm-dot-wave/: index.html
docs/games/wasm-fib-rush/: index.html
docs/games/wasm-int-dot-beam/: index.html
docs/games/wasm-saxpy-surge/: index.html
docs/games/wasm-sum-tide/: index.html
docs/playground/: index.html
editors/vscode/: language-configuration.json  package.json
editors/vscode/snippets/: selvr.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: selvr.tmLanguage.json
examples/: 01_hello_world.self  02_variables.self  03_functions.self  04_control_flow.self  05_pattern_matching.self  06_structs.self  07_enums.self  08_option_result.self  09_traits.self  10_generics.self  11_closures_iterators.self  12_async_fetch.self  13_dom_events.self  14_modules.self  15_ownership.self  16_collections.self  17_string_handling.self  18_error_handling.self  19_todo_app.self  20_canvas_game.self  21_macros.self  22_websocket.self  23_type_system_soundness.self  24_benchmark_animation.self  25_linked_list.self
playground/: index.html
runtime/: selvr-loader.js
std/collections/: array.self  string.self
std/core/: iter.self  option.self  result.self
std/devtools/: devtools.runtime.js  devtools.self
std/dom/: dom.self
std/net/: fetch.self  websocket.self
std/test/: test.self
std/time/: datetime.self
tests/should_fail/: 01_type_mismatch.self  02_use_after_move.self  03_immutable_assign.self  04_unresolved_name.self  05_arg_count_mismatch.self  06_missing_return.self  07_await_outside_async.self  08_non_exhaustive_match.self  09_no_such_field.self  10_not_callable.self  11_infinite_type.self  12_double_move.self  13_return_type_mismatch.self  README.md
(+44 files in other folders)
