[package]
name        = "selvr-bytecode"
description = "Selvr bytecode format, emitter, optimizer, and binary encoder."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
selvr-ir   = { path = "../selvr-ir" }
smol_str   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
