[package]
name        = "selvr-dap"
description = "Debug Adapter Protocol (DAP) server for Selvr — unified WASM/JS debugging."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[[bin]]
name = "selvr-dap"
path = "src/main.rs"

[dependencies]
selvr-parser  = { path = "../selvr-parser" }
selvr-lexer   = { path = "../selvr-lexer" }
selvr-codegen = { path = "../selvr-codegen" }
selvr-target  = { path = "../selvr-target" }
selvr-ir      = { path = "../selvr-ir" }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
