[package]
name        = "selvr-lexer"
description = "Tokenizer / lexer for the Selvr language"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
logos     = { workspace = true }
smol_str  = { workspace = true }
miette    = { workspace = true }
thiserror = { workspace = true }
