[package]
name        = "selvr-lsp"
description = "Language Server Protocol (LSP) server for Selvr."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[[bin]]
name = "selvr-lsp"
path = "src/main.rs"

[dependencies]
selvr-parser  = { path = "../selvr-parser" }
selvr-lexer   = { path = "../selvr-lexer" }
selvr-lint    = { path = "../selvr-lint" }
selvr-target  = { path = "../selvr-target" }
selvr-ir      = { path = "../selvr-ir" }
selvr-fmt     = { path = "../selvr-fmt" }
lsp-server    = "0.7"
lsp-types     = { version = "0.97", features = ["proposed"] }
anyhow        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
smol_str      = { workspace = true }
