[package]
name        = "selvr-parser"
description = "Parser producing an AST for the Selvr language"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
selvr-lexer = { path = "../selvr-lexer" }
chumsky     = { workspace = true }
smol_str    = { workspace = true }
miette      = { workspace = true }
thiserror   = { workspace = true }
