[package]
name        = "selvr-pkg"
description = "Package manager core for Selvr — manifest parsing, dependency resolution, lockfile, registry client"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
toml         = { workspace = true }
semver       = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
