[package]
name        = "selvr-vm"
description = "Selvr stack-machine VM, memory manager, and WASM runtime."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
selvr-bytecode = { path = "../selvr-bytecode" }
selvr-ir       = { path = "../selvr-ir" }
smol_str       = { workspace = true }
thiserror      = { workspace = true }

# WASM / JS interop — only pulled in when compiling to wasm32.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys       = "0.3"
web-sys      = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "EventTarget",
    "MouseEvent",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level     = "z"   # minimise .wasm size
lto           = true
codegen-units = 1
panic         = "abort"
